k8sfile/release/0-deftype.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: system

---

apiVersion: v1
kind: Namespace
metadata:
  name: frepai
