k8sfile/release/5-srs.yaml

kind: Service
apiVersion: v1
metadata:
  name: srs-service
  namespace: frepai
spec:
  selector:
    app: srs-app
  type: NodePort
  ports:
    - name: srs-web
      port: 8080
      targetPort: web-port
      nodePort: 30808
    - name: srs-rtmp
      port: 1935
      targetPort: rtmp-port
      nodePort: 31935
    - name: srs-api
      port: 1985
      targetPort: api-port
      nodePort: 31985
    - name: srs-rtc
      port: 30008
      targetPort: rtc-port
      nodePort: 30008
      protocol: UDP

  # not modify source ip
  externalTrafficPolicy: Local

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: srs-deployment
  namespace: frepai
  labels:
    app: srs-app
spec:
  selector:
    matchLabels:
      app: srs-app
  replicas: 1
  template:
    metadata:
      labels:
        app: srs-app
    spec:
      containers:
        - name: srs-rtc
          image: hzcsk8s.io/frepai/srs_rtc
          imagePullPolicy: Always
          ports:
            - name: web-port
              containerPort: 8080
            - name: rtmp-port
              containerPort: 1935
            - name: api-port
              containerPort: 1985
            - name: rtc-port
              containerPort: 30008
              protocol: UDP

          command:
            - /bin/sh
            - -c
            - |
              SRS_ROOT=/usr/local/srs
              SRS_CONF=${SRS_ROOT}/conf/frepai.conf
              DURATIONS=(15 30 300 600 900 1200 1500)
              cat /srs/server.conf > ${SRS_CONF}
              for d in ${DURATIONS[@]}
              do
                  DURATION=$d eval "echo \"$(cat /srs/vhost.conf)\"" >> ${SRS_CONF}
              done
              CANDIDATE=$(curl -s ipecho.net/plain) ${SRS_ROOT}/objs/srs -c ${SRS_CONF}

          resources:
            requests:
              memory: "0.5Gi"
              cpu: "0.8"
            limits:
              memory: "1Gi"
              cpu: "0.8"

          # lifecycle:
          #   postStart:
          #     exec:
          #       command: ["/bin/sh", "-c", "mkdir -p /data"]
          #   preStop:
          #     exec:
          #       command: ["/bin/sh", "-c", "rm -rf /data 2>/dev/null"]

          volumeMounts:
            - name: cache-volume
              mountPath: /data
            - name: srsconf-volume
              mountPath: "/srs/"
              readOnly: true
            # - name: srsconf-volume
            #   mountPath: "/srs/server.conf"
            #     subPath: server.conf
            #   readOnly: true
            # - name: srsconf-volume
            #   mountPath: "/srs/vhost.conf"
            #   # subPath: vhost.conf
            #   readOnly: true

        - name: srs-app
          image: hzcsk8s.io/frepai/srs_app
          imagePullPolicy: Always
          command:
            - /bin/sh
            - -c
          args: ["NET_IP=$(curl -s ipecho.net/plain) python3 app_service.py --task srs.dvr"]

          resources:
            requests:
              memory: "0.5Gi"
              cpu: "0.8"
            limits:
              memory: "1Gi"
              cpu: "0.8"

          livenessProbe:
            exec:
              command: ["test", "-e", "/tmp/healthy"]
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 20
            failureThreshold: 3

          volumeMounts:
            - name: cache-volume
              mountPath: /data

      volumes:
      # - name: srs-dvr
      #   hostPath:
      #     path: /root
        - name: cache-volume
          emptyDir: {}
        - name: srsconf-volume
          configMap:
            name: frepai-srs-cm
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
