k8sfile/release/6-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  name: ingress-nginx
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.1.3
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  ports:
  - appProtocol: http
    name: http
    port: 80
    protocol: TCP
    targetPort: http
    # nodePort: 30080
  - appProtocol: https
    name: https
    port: 443
    protocol: TCP
    targetPort: https
    # nodePort: 30433
  - name: rtmp
    port: 1935
    protocol: TCP
    targetPort: rtmp
    # nodePort: 31935
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  # type: NodePort
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.1.3
  name: ingress-nginx-controller-admission
  namespace: ingress-nginx
spec:
  ports:
  - appProtocol: https
    name: https-webhook
    port: 443
    targetPort: webhook
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.1.3
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  minReadySeconds: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: ingress-nginx
        app.kubernetes.io/name: ingress-nginx
    spec:
      # QRS importent
      hostNetwork: true
      containers:
      - args:
        - /nginx-ingress-controller
        - --election-id=ingress-controller-leader
        - --controller-class=k8s.io/ingress-nginx
        - --ingress-class=nginx
        - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
        - --tcp-services-configmap=$(POD_NAMESPACE)/tcp-services
        - --shutdown-grace-period=10
        # - --v=5
        # - --validating-webhook=:8443
        # - --validating-webhook-certificate=/usr/local/certificates/cert
        # - --validating-webhook-key=/usr/local/certificates/key
        image: registry.cn-hangzhou.aliyuncs.com/google_containers/nginx-ingress-controller:v1.1.3@sha256:31f47c1e202b39fadecf822a9b76370bd4baed199a005b3e7d4d1455f4fd3fe2
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /wait-shutdown
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: controller
        ports:
         - containerPort: 1935
           name: rtmp
           protocol: TCP
         - containerPort: 80
           name: http
           protocol: TCP
         - containerPort: 443
           name: https
           protocol: TCP
        # - containerPort: 8443
        #   name: webhook
        #   protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 100m
            memory: 90Mi
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          runAsUser: 101
        # volumeMounts:
        # - mountPath: /usr/local/certificates/
        #   name: webhook-cert
        #   readOnly: true
      # dnsPolicy: ClusterFirst
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        private/proxy: "true"
      tolerations:
      - key: private/proxy
        operator: Exists
        effect: NoSchedule
      serviceAccountName: ingress-nginx
      terminationGracePeriodSeconds: 15
      # terminationGracePeriodSeconds: 300
      # volumes:
      # - name: webhook-cert
      #   secret:
      #     secretName: ingress-nginx-admission
# ---
# apiVersion: batch/v1
# kind: Job
# metadata:
#   labels:
#     app.kubernetes.io/component: admission-webhook
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/part-of: ingress-nginx
#     app.kubernetes.io/version: 1.1.3
#   name: ingress-nginx-admission-create
#   namespace: ingress-nginx
# spec:
#   template:
#     metadata:
#       labels:
#         app.kubernetes.io/component: admission-webhook
#         app.kubernetes.io/instance: ingress-nginx
#         app.kubernetes.io/name: ingress-nginx
#         app.kubernetes.io/part-of: ingress-nginx
#         app.kubernetes.io/version: 1.1.3
#       name: ingress-nginx-admission-create
#     spec:
#       containers:
#       - args:
#         - create
#         - --host=ingress-nginx-controller-admission,ingress-nginx-controller-admission.$(POD_NAMESPACE).svc
#         - --namespace=$(POD_NAMESPACE)
#         - --secret-name=ingress-nginx-admission
#         env:
#         - name: POD_NAMESPACE
#           valueFrom:
#             fieldRef:
#               fieldPath: metadata.namespace
#         # image: k8s.gcr.io/ingress-nginx/kube-webhook-certgen:v1.1.1@sha256:64d8c73dca984af206adf9d6d7e46aa550362b1d7a01f3a0a91b20cc67868660
#         image: registry.cn-hangzhou.aliyuncs.com/google_containers/kube-webhook-certgen:v1.1.1@sha256:64d8c73dca984af206adf9d6d7e46aa550362b1d7a01f3a0a91b20cc67868660
#         imagePullPolicy: IfNotPresent
#         name: create
#         securityContext:
#           allowPrivilegeEscalation: false
#       nodeSelector:
#         kubernetes.io/os: linux
#       restartPolicy: OnFailure
#       securityContext:
#         fsGroup: 2000
#         runAsNonRoot: true
#         runAsUser: 2000
#       serviceAccountName: ingress-nginx-admission
# ---
# apiVersion: batch/v1
# kind: Job
# metadata:
#   labels:
#     app.kubernetes.io/component: admission-webhook
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/part-of: ingress-nginx
#     app.kubernetes.io/version: 1.1.3
#   name: ingress-nginx-admission-patch
#   namespace: ingress-nginx
# spec:
#   template:
#     metadata:
#       labels:
#         app.kubernetes.io/component: admission-webhook
#         app.kubernetes.io/instance: ingress-nginx
#         app.kubernetes.io/name: ingress-nginx
#         app.kubernetes.io/part-of: ingress-nginx
#         app.kubernetes.io/version: 1.1.3
#       name: ingress-nginx-admission-patch
#     spec:
#       containers:
#       - args:
#         - patch
#         - --webhook-name=ingress-nginx-admission
#         - --namespace=$(POD_NAMESPACE)
#         - --patch-mutating=false
#         - --secret-name=ingress-nginx-admission
#         - --patch-failure-policy=Fail
#         env:
#         - name: POD_NAMESPACE
#           valueFrom:
#             fieldRef:
#               fieldPath: metadata.namespace
#         # image: k8s.gcr.io/ingress-nginx/kube-webhook-certgen:v1.1.1@sha256:64d8c73dca984af206adf9d6d7e46aa550362b1d7a01f3a0a91b20cc67868660
#         image: registry.cn-hangzhou.aliyuncs.com/google_containers/kube-webhook-certgen:v1.1.1@sha256:64d8c73dca984af206adf9d6d7e46aa550362b1d7a01f3a0a91b20cc67868660
#         imagePullPolicy: IfNotPresent
#         name: patch
#         securityContext:
#           allowPrivilegeEscalation: false
#       nodeSelector:
#         kubernetes.io/os: linux
#       restartPolicy: OnFailure
#       securityContext:
#         fsGroup: 2000
#         runAsNonRoot: true
#         runAsUser: 2000
#       serviceAccountName: ingress-nginx-admission
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.1.3
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
# ---
# apiVersion: admissionregistration.k8s.io/v1
# kind: ValidatingWebhookConfiguration
# metadata:
#   labels:
#     app.kubernetes.io/component: admission-webhook
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/part-of: ingress-nginx
#     app.kubernetes.io/version: 1.1.3
#   name: ingress-nginx-admission
# webhooks:
# - admissionReviewVersions:
#   - v1
#   clientConfig:
#     service:
#       name: ingress-nginx-controller-admission
#       namespace: ingress-nginx
#       path: /networking/v1/ingresses
#   failurePolicy: Fail
#   matchPolicy: Equivalent
#   name: validate.nginx.ingress.kubernetes.io
#   rules:
#   - apiGroups:
#     - networking.k8s.io
#     apiVersions:
#     - v1
#     operations:
#     - CREATE
#     - UPDATE
#     resources:
#     - ingresses
#   sideEffects: None

# for test
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: web
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: web-server
#   namespace: web
# spec:
#   selector:
#     matchLabels:
#       app: web
#   template:
#     metadata:
#       labels:
#         app: web
#     spec:
#       containers:
#       - name: httpd
#         image: httpd:2.4.48-alpine3.14
#         ports:
#         - containerPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: web-server-service
#   namespace: web
# spec:
#   selector:
#     app: web
#   ports:
#     - protocol: TCP
#       port: 5000
#       targetPort: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: web-server-ingress
#   namespace: web
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: web.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: web-server-service
#             port:
#               number: 5000
