k8sfile/release/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frepai-srs-ingress
  namespace: frepai
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - srs.hzcsdata.com
    secretName: srs-hzcsdata-tls
  rules:
  - host: "srs.hzcsdata.com"
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: srs-service
              port:
                number: 80
